examples/test/testpolicy4926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4926
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key17: value48
      key14: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value11
          key47: value1
      podSelector:
        matchLabels:
          key44: value18
